--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
+  text-align: start;
+  font-family: 'Noto Sans Multani', sans-serif;
+  margin-top: 0;
+  background-color: #F5F5F5;
 }
 
 .App-logo {
